# SlopSearX

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SKILL.md  build_lightrag_batch.py  config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  security-fix-mission.md  spec.md  ssx  vault_ingestion_ai_in_context.py  vault_ingestion_batch.py
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docker.yml  droid-review.yml  droid-wiki-refresh.yml  nightly.yml  release-please.yml
docker/: healthcheck.py
docs/: ENGINE_ADAPTERS.md  runbooks.md
docs/alerting/: rules.yml
docs/grafana/: per-engine-monitoring.json
droid-wiki/: .wiki-meta.json  by-the-numbers.md  deployment.md  fun-facts.md  lore.md  maintainers.md
droid-wiki/api/: index.md
droid-wiki/features/: engine-implementations.md  index.md  output-formatters.md
droid-wiki/how-to-contribute/: development-workflow.md  index.md  patterns-and-conventions.md  testing.md  tooling.md
droid-wiki/how-to-monitor/: alerting.md  index.md  logging.md  metrics.md  tracing.md
droid-wiki/overview/: architecture.md  getting-started.md  glossary.md  index.md
droid-wiki/primitives/: index.md  search-result.md
droid-wiki/reference/: configuration.md  data-models.md  dependencies.md  index.md
droid-wiki/systems/: adapter-interface.md  api-server.md  audit-trail.md  caching.md  configuration.md  engine-stats.md  index.md  merging-and-ranking.md  observability.md  proxy-pool.md  query-router.md  rate-limiting.md  suggestion-service.md
engines/: __init__.py  abuseipdb.py  arxiv.py  ashby.py  brave.py  censys.py  clinicaltrials.py  courtlistener.py  crates.py  crtsh.py  cve.py  data_gov.py  dehashed.py  dockerhub.py  duckduckgo.py  edgar.py  epss.py  exploitdb.py  fred.py  github.py  google.py  greenhouse.py  greynoise.py  hackernews.py  hibp.py  huggingface.py  intelx.py  internetarchive.py  lever.py  mitreattack.py  musicbrainz.py  nominatim.py  npm.py  nvd.py  openalex.py  openfda.py  openlibrary.py  otx.py  oyez.py  pubchem.py  (+15 more)
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  service.yaml
references/: abuseipdb.md  arxiv.md  brave.md  censys.md  clinicaltrials.md  crates.md  crtsh.md  cve.md  dehashed.md  dockerhub.md  duckduckgo.md  edgar.md  epss.md  exploitdb.md  fred.md  github.md  google.md  greynoise.md  hackernews.md  hibp.md  huggingface.md  intelx.md  internetarchive.md  mitreattack.md  musicbrainz.md  nominatim.md  npm.md  nvd.md  openalex.md  openfda.md  openlibrary.md  otx.md  oyez.md  pubchem.md  pubmed.md  pypi.md  reddit.md  repology.md  rubygems.md  semanticscholar.md  (+8 more)
slopsearx/: adapter.py  audit.py  cache.py  config.py  formatter.py  jobs_utils.py  logging.py  merger.py  metrics.py  middleware.py  proxypool.py  ratelimit.py  router.py  server.py  stats.py  suggest.py
tests/: conftest.py  test_abuseipdb.py  test_adapter.py  test_adapters.py  test_audit.py  test_cache.py  test_cache_integration.py  test_categories.py  test_censys.py  test_concurrency.py  test_config.py  test_crtsh.py  test_cve.py  test_dehashed.py  test_epss.py  test_exploitdb.py  test_fail_closed.py  test_feature_flags.py  test_formatter.py  test_fred.py  test_google_adapter.py  test_greynoise.py  test_hibp.py  test_integration.py  test_intelx.py  test_internetarchive_adapter.py  test_jobs_adapters.py  test_merger.py  test_metrics.py  test_mitreattack.py  test_new_engines.py  test_nvd.py  test_openalex_adapter.py  test_otx.py  test_packaging.py  test_ratelimit.py  test_reddit.py  test_server.py  test_shodan.py  test_stackexchange_adapter.py  (+6 more)
