[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slopsearx"
version = "0.1.0"
description = "Cloud-native, stateless, AI-agent-first meta search engine"
license = "MIT"
readme = "README.md"
authors = [
    {name = "Magnus Hedemark"},
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "lxml>=5.3.0",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.34.0",
    "valkey>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[tool.setuptools.packages.find]
include = ["slopsearx*", "engines*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
