[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slopsearx"
version = "0.1.0"
description = "Cloud-native, stateless, AI-agent-first meta search engine"
license = "MIT"
readme = "README.md"
authors = [
    {name = "Magnus Hedemark"},
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "lxml>=5.3.0",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.34.0",
    "valkey>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
    "cssselect>=1.2",
    "mypy>=1.13",
    "pytest-cov>=6.0",
    "pip-tools>=7.4",
]

[tool.setuptools.packages.find]
include = ["slopsearx*", "engines*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["valkey", "yaml", "lxml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=slopsearx --cov=engines --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["slopsearx", "engines"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
