[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slopsearx"
version = "0.1.1"
description = "Cloud-native, stateless, AI-agent-first meta search engine"
license = "MIT"
readme = "README.md"
authors = [
    {name = "Magnus Hedemark"},
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "lxml>=5.3.0",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.34.0",
    "valkey>=6.0.0",
    "structlog>=24.0",
    "sentry-sdk>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
    "cssselect>=1.2",
    "mypy>=1.13",
    "pytest-cov>=6.0",
    "pip-tools>=7.4",
    "pre-commit>=4.0",
    "radon>=6.0",
    "vulture>=2.11",
    "import-linter>=2.3",
    "deptry>=0.21",
    "pip-audit>=2.8",
]

[tool.setuptools.packages.find]
include = ["slopsearx*", "engines*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["valkey", "valkey.*", "yaml", "lxml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=slopsearx --cov=engines --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["slopsearx", "engines"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.vulture]
paths = ["slopsearx", "engines"]
min_confidence = 65
ignore_decorators = ["@register_engine"]
ignore_names = ["engine_type", "categories", "fallback"]

[tool.deptry]
extend_exclude = ["tests", "engines"]

[tool.importlinter]
root_package = "slopsearx"

[[tool.importlinter.contracts]]
id = "architecture-layers"
name = "Architecture layering: app < infrastructure < domain"
type = "layers"
layers = [
    "slopsearx.server",
    "slopsearx.router",
    "slopsearx.merger",
    "slopsearx.formatter",
    "slopsearx.suggest",
    "slopsearx.stats",
    "slopsearx.audit",
    "slopsearx.cache",
    "slopsearx.config",
    "slopsearx.ratelimit",
    "slopsearx.proxypool",
    "slopsearx.adapter",
]
ignore_imports = [
    "slopsearx.adapter -> slopsearx.proxypool",
]
